udemy_courses/Networking_in_depth/vpc_private_link/internet_gateway.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.vpc_a.id

  tags = {
    Name = "VPC_A GW"
  }
}
